:construction: Added resize :bug: Fixed aspect ration on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,7 @@ html {
 html,
 body
 {
+    width: 100vw;
     height: 100vh;
     font-family: 'Poppins';
 }
@@ -42,6 +43,13 @@ section h1 {
     font-size: 3rem;
     text-transform: uppercase;
     letter-spacing: 1rem;
+    text-align: center;
+}
+@media screen and (max-width: 550px) {
+    section h1 {
+        font-size: 1.2rem;
+        letter-spacing: 0.6rem;
+    }
 }
 footer {
     position: fixed;
